finished setting up authentication, setup profile, setup dashboard

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">JeezyFashion</string>
     <string name="login">Login</string>
     <string name="attribution"><![CDATA[<a href=\'https://www.freepik.com/vectors/woman\'>Woman vector created by freepik - www.freepik.com</a>]]></string>
+    <string name="logout">Logout</string>
+    <string name="nav_header_background">Nav Header Background</string>
+    <string name="jeezy_fashion">Jeezy Fashion</string>
+    <string name="placeholder">Placeholder</string>
+    <string name="error">Error</string>
 </resources>
