--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="jeezy_fashion">Jeezy Fashion</string>
     <string name="placeholder">Placeholder</string>
     <string name="error">Error</string>
+    <string name="nav_menu_home">Home</string>
+    <string name="nav_menu_favorites">Favorites</string>
+    <string name="delete_icon">Delete icon</string>
+    <string name="favorite_icon">Favorite icon</string>
 </resources>
