--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="favorite_icon">Favorite icon</string>
     <string name="submit">Submit</string>
     <string name="enter_code">Enter Code</string>
+    <string name="resend_code">Resend Code</string>
 </resources>
